# Basical

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.c  error.c  evaluator.c  expression.c  main.c  parser.c  scanner.c  tags
include/: Stack.c  Stack.h  error.h  evaluator.h  expression.h  parser.h  scanner.h  token.h  utility.c  utility.h
lib/: error.c  error.h  stack.c  stack.h  stackimp.h  utility.c  utility.h
src/: ast.c  ast.h  basical.c  common.h  error.c  error.h  evaluate.c  evaluate.h  lexer.c  lexer.h  main.c  main.h  parser.c  parser.h  token.c  token.h  value.c  value.h
src/grammer/: basical.gram
tests/: expr1.math  expr2.math  expr3.math  expr4.math  expr5.math  expr6.math  expr7.math  list1.math  list2.math  list3.math  test.c  test.h  tokenize.math  tokenize.math.expected
